test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/union-dangling-or.widl
typedef (One or Two or) UnionOr;
